--- a/curse/course.css
+++ b/curse/course.css
@@ -119,7 +119,7 @@ nav li {
    color: var(--white);
    margin: 10px;
    cursor: pointer;
-   background: #222;
+   background: indianred;
    padding: 5px;
    border-radius: 10px;
    border: none;
