--- a/curse/course.css
+++ b/curse/course.css
@@ -24,11 +24,17 @@ header{
     padding: 20px ;
     position: fixed;
     z-index: 999;
+    
 }
 
 header a {
     text-decoration: none;
     color: var(--green);
+}
+
+nav{
+    position: relative;
+    transition: 1s; 
 }
 
 nav ul{
@@ -42,24 +48,40 @@ nav li {
     font-size: 1.1rem;
 }
 
+#close{
+    position: absolute;
+    top: 1rem;
+    right: 1rem;
+    font-family: cursive;
+}
+
 .home{
     padding-top: 10rem;
+    padding: 200px;
     background: var(--dark--green);
     color: var(--white);
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-direction: column;
     padding: 10rem;
     height: 100vh;
 }
 
 .home p {
-    font-size: 2.5rem;
-    width: 35rem;
+    font-size: 1.5rem;
+    width: 400px;
+    padding: 40px;
+    margin-bottom: 10px;
+    text-align: center;
+}
+
+.p p {
     text-align: center;
 }
 
 .home button{
+   
     position: absolute;
     bottom: 10rem;
     width: 15rem;
@@ -124,3 +146,41 @@ nav li {
    border-radius: 10px;
    border: none;
 }
+
+.open{
+    transform: translateY(0);
+}
+
+.close{
+    transform: translateY(-1000%);
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    background: #588157;
+    opacity: 0.9;
+}
+
+.burger-none{
+    display: none;
+}
+
+.burger{
+   display: flex;
+   width: 50px;
+   height: 50px;
+   flex-direction: column;
+   justify-content: space-around;
+   padding: 10px;
+   cursor: pointer;
+}
+
+.burger span{
+    width: 100%;
+    height: 4px;
+    background: linear-gradient(90deg ,  #80ED99 ,#588157 );
+    transition: 0.5s;
+    
+}
+
+
+
