--- a/curse/course.css
+++ b/curse/course.css
@@ -69,8 +69,8 @@ nav li {
 }
 
 .home p {
-    font-size: 1.5rem;
-    width: 400px;
+    font-size: 2rem;
+    width: 600px;
     padding: 40px;
     margin-bottom: 10px;
     text-align: center;
@@ -182,5 +182,13 @@ nav li {
     
 }
 
+
+@media (max-width:569px){
+   .home p {
+        width: 400px;
+        font-size: 1.5rem;
+       
+    }
+}
 
 
