--- a/curse/course.css
+++ b/curse/course.css
@@ -23,29 +23,36 @@ header{
     box-shadow: 0 5px 25px  rgba(1 1 1  / 15%);
     padding: 20px ;
     position: fixed;
-    z-index: 999;
+    z-index: 9999;
     
 }
 
 header a {
     text-decoration: none;
     color: var(--green);
+    transition: 0.5s;
 }
 
 nav{
     position: relative;
-    transition: 2s; 
+    transition:  all 0.5s ease-in-out; 
 }
 
 nav ul{
     display: flex;
-    align-items: center;
+    align-items: center; 
 }
 
 nav li {
     margin: 10px;
     list-style: none;
     font-size: 1.1rem;
+}
+
+nav ul li a:hover{
+    color: #80ED99;
+    font-size: 1.5rem;
+    letter-spacing: 2px;
 }
 
 #close{
@@ -147,9 +154,7 @@ nav li {
    border: none;
 }
 
-.open{
-    transform: translateY(0);
-}
+
 
 .close{
     transform: translateY(-1000%);
@@ -172,14 +177,26 @@ nav li {
    justify-content: space-around;
    padding: 10px;
    cursor: pointer;
+   transition: 0.5s all;
 }
 
 .burger span{
     width: 100%;
     height: 4px;
     background: linear-gradient(90deg ,  #80ED99 ,#588157 );
-    transition: 0.5s;
-    
+    transition: 0.5s ease;
+}
+
+.burger.active span:nth-child(2){
+  opacity: 0;
+}
+
+.burger.active span:nth-child(1){
+    transform: translateY(10px) rotate(45deg);
+}
+
+.burger.active span:nth-child(3){
+    transform: translateY(-10px) rotate(-45deg);
 }
 
 
@@ -187,8 +204,45 @@ nav li {
    .home p {
         width: 400px;
         font-size: 1.5rem;
-       
     }
+
+    .close{
+        display: block;
+    }
+
+    .burger-none{
+        display: block;
+    }
+
+    nav{
+        display: flex;
+        transform: translateY(-110%);
+        position: fixed;
+        width: 100%;
+        height: 80vh;
+        opacity: 1;
+        justify-content: center;
+        align-items: center;
+        background: #588157;
+    }
+
+    nav ul {
+        display: flex;
+        flex-direction: column;
+    }
+
+    nav ul li {
+        font-size: 30px;
+        margin-top: 10px;
+    }
+
+    nav ul li a {
+        color: #fff;
+    }
+
+    
 }
+
+
 
 
